adicionada biblioteca RSyntaxTextArea

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,11 @@ dist.jar=${dist.dir}/Analizador_lexico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.rsyntaxtextarea.jar=C:\\Users\\Murilo Marcineiro\\Desktop\\rsyntaxtextarea.jar
+file.reference.rsyntaxtextarea.jar-1=rsyntaxtextarea.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.rsyntaxtextarea.jar}
+    ${file.reference.rsyntaxtextarea.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
